# native-reproducer-simulating-numba-dpex-issue-809

./: .gitignore  CMakeLists.txt  README.md  cl_interop.cpp  cl_interop.h  krn.spv  krn_name.txt  launch.cpp  ze_interop.cpp  ze_interop.h
scripts/: README.md  create_data.py  run.py
